wp-content/themes/toppeq/scss/theme/_header.scss
.logo{
    width: 200px;
    a{
        // color: var(--font-color);
        color: #fff;
        vertical-align: middle;
    }
    img{
        max-width: 100%;
        width: 100%;
        height: auto;   
    }
    .normal-logo{
        display: block;
    }
    .sticky-logo{
        display: none;
    }
    @media (max-width: 991px) {
        width: 100px;
    }
}



body:not(.home , .page-template-front-page-home , .page-template-front-page-version1-php){
    header{
        background: #fff;
        padding: 25px 65px;
        z-index: 4;
        .logo{
            display: block;
            .normal-logo{
                display: none;
            }
            .sticky-logo{
                display: block;
            }
        }
        &.sticky{
            position: sticky;
            top: 0;
            width: 100%;
            background: #fff;
            padding-top: 25px;
            padding-bottom: 25px;
        }
    }
}
.hamburger-menu{
    > div {
        background-color: #000;
        display: none;
    }
}
.page-template-template-press-php , .single{
    .hamburger-menu{
        > div {
            background-color: #000;
        }
    }
}
.home, .page-template-front-page-home, .page-template-front-page-version1-php{
    header{
        position: absolute;
        background: transparent;
        padding: 80px 65px;
        z-index: 10;
        width: 100%;
        transition: all .3s ease-in-out;
        &.sticky{
            position: fixed;
            top: 0;
            width: 100%;
            background: #fff;
            padding-top: 25px;
            padding-bottom: 25px;
            .logo{
                .normal-logo{
                    display: none;
                }
                .sticky-logo{
                    display: block;
                }
            }
            .hamburger-menu{
                > div {
                    background-color: black;
                }
            }
        }
        @media (max-width: 991px) {
            padding: 25px 0;
        }
    }
    .header-bg{
        display: none;
    }
}


#navbarNav{    
    .navbar-nav{
        margin-left: auto;
        .nav-item {
            padding: 0 20px;
            .nav-link{
                padding: 0;
                color: var(--font-color);
                font-size: 20px;
                font-weight: normal;
                font-stretch: normal;
                letter-spacing: normal;
                border-bottom: 3px solid transparent;
                display: inline-block;
                &:hover{
                    border-bottom: 3px solid var(--font-color);
                }
            }
            &.active{
                .nav-link{
                    border-bottom: 3px solid var(--font-color);
                }
            }
            &:last-child{
                padding-right: 0;
            }
            @media (max-width: 767px) {
                margin-bottom: 8px;
                padding-left: 0;
                padding-right: 0;
            }
        }
    }
    @media (min-width: 768px) {
        width: calc(100% - 100px);
        text-align: right;
    }
}

.navbar-toggler{
    padding: 0;
    outline: 0;
    i{
        color: var(--font-color);
    }
    &:focus{
        outline: 0;
    }
}

.hamburger-menu{
    display: inline-block;
    cursor: pointer;
    .bar1, .bar2, .bar3 {
        width: 35px;
        height: 5px;
        background-color: #fff;
        margin: 6px 0;
        transition: 0.4s;
        border-radius: 4px;
    }
    .bar1{
        margin-top: 0;
        width: 47px;
        height: 7px;
        margin-left: auto;
        @media (max-width: 768px) {
            width: 30px;
            height: 4px;
        }
    }
    .bar2{
        width: 25px;
        height: 4px;
        margin-left: auto; 
        @media (max-width: 768px) {
            width: 14px;
            height: 2px;
        }
    }
    .bar3{
        margin-bottom: 0;
        width: 35px;
        height: 6px;
        margin-left: auto;
        @media (max-width: 768px) {
            width: 22px;
            height: 4px;
        }
    }
    &.change .bar1 {
        -webkit-transform: rotate(-45deg) translate(-8px, 6px);
        transform: rotate(-45deg) translate(-8px, 6px);
        width: 47px;
    }
    &.change .bar2 {
        opacity: 0;
    }
    &.change .bar3 {
        -webkit-transform: rotate(45deg) translate(-9px, -8px);
        transform: rotate(45deg) translate(-9px, -8px);
        width: 47px;
    }
}

.navbar{
    @media (min-width: 768px) {
        justify-content: space-between;
    }
}

.site-menu{
    position: fixed;
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    background: white;
    z-index: 11;
    backface-visibility: hidden;
    overflow: auto;
    transform: translateY(-100%);
    transition-property: transform;
    transition-duration: .4s;
    ul.navbar-nav {
        li{
            a{
                color: black;
                font-size: 25px;
                border-bottom: 3px solid transparent;
                padding: 0;
                padding-bottom: 10px;
                margin-bottom: 10px;
                &.active{
                    color: $orange-3;
                }
            }
            ul{
                li{
                    list-style-type: none;
                }
            }
        }
    }
    &.visible{
        transform: translateY(0);
    }
    
    .rectangle{
        &-black{
            width: 84px;
            height: 100%;
            background-color: #090b0c;
            position: absolute;
            top: 0;
            right: 84px;
            @media (max-width: 767px){
                right: 25px;
                width: 25px;
            }
        }

        &-orange{
            width: 84px;
            height: 100%;
            background-color: $orange-3;
            position: absolute;
            top: 0;
            right: 0;
            z-index: 11;
            @media (max-width: 767px){
                width: 25px;
            }
        }
    }
    .menu-items{
        padding: 50px 85px;
        @media (max-width: 768px) {
            padding: 44px 25px;
        }
    }
}

.menu-close-btn{
    color: #fff;
    position: absolute;
    top: 54px;
    right: 118px;
    padding: 0;
    margin-right: -9px;
    z-index: 1;
    img{
        width: 35px;
        @media (max-width: 767px){
            width: 18px;
        }
    }
    @media (max-width: 768px) {
        top: 40px;
        right: 38px;
    }
}

// .sticky ~ #content {
//     padding-top: 202px;
//     @media (max-width: 991px) {
//         padding-top: 114px;
//     }
// }


.header-bg , .header-bg-post{
    background: url('../images/slider-img.png') no-repeat;
    padding: 25px 65px;
    background-size: cover;
    width: 100%;
    background-position: bottom;
    margin-bottom: 50px;
    margin-top: 0px;
    .breadcrumbs-wrapper{
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding: 0 10px 0 24px;
        .title{
            margin-top: 0.5rem;
            color: white;
            position: relative;
            &:before{
               content: "";
                position: absolute;
                width: 20px;
                height: 20px;
                border: 2px solid $orange-3;
                z-index: 0;
                top: -8px;
                left: -15px;
                border-width: 2px 0 0 2px;
            }
            &:after{
               content: "";
                position: absolute;
                width: 20px;
                height: 20px;
                border: 2px solid $orange-3;
                z-index: 0;
                bottom: -8px;
                right: -15px;
                border-width: 0 2px 2px 0;
                @media (max-width: 425px){
                    right: -25px;
                }
            }
            @media (max-width: 767px){
                white-space: nowrap;
            }
        }
        .breadcrumbs-inside{
            color: white;
            ul{
                padding-left: 0;
                display: flex;
                margin-top: 1rem; 
                justify-content: center;
                li{
                    list-style-type: none;
                    a{
                        color: $orange-3;
                        span{
                            padding: 0 0.5rem;
                        }
                        &:hover{
                            color: white;
                        }
                    }
                    span{
                        padding: 0 0.5rem;
                    }
                }
            }
        }
        @media (max-width: 767px){
            display: block;
            text-align: center;
        }
    }
}

